--- a/css/my_style.css
+++ b/css/my_style.css
@@ -2,9 +2,7 @@
 display:inline-block;
 color: white;
 padding-left: 3%;
-
 }
-
 .FirstHeader {
 background-color: black;
 position: fixed;
@@ -14,4 +12,61 @@ text-transform: uppercase;
 font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
 }
 
+.SecondHeader ul li{
+    display:inline-block;
+    color: black;
+    padding-left: 3%;
+    }
+.SecondHeader{
+    background-color: rgb(211, 206, 206);
+    position: relative;
+    top: 40;
+    width:100%; 
+    height: 7%;
+    text-transform: uppercase;
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
+}
+.SHHeader {
+    text-align: right;
+    padding-right: 10%;
+}
+.SHHeader .Title {
+    font-size: 40px;
+    clear: both;
+    text-align: left;
+    }
 
+    .sp{
+        height: 18%;
+        width: 50%;
+        position: fixed;
+        z-index: 1;
+        top: 12%;
+        overflow-x: hidden;
+        padding-top: 20px;
+    }
+    .Right{ 
+         right: 0;
+        background-color: rgb(112, 98, 98);
+    }
+    .Left{
+        left: 0;
+        background-color: rgb(112, 98, 98);
+    }
+
+    .dir {
+        float: right;
+        width: 25%;
+        padding-right: 10%;
+
+    }
+
+    .esq {
+        float: left;
+      width: 25%;
+      padding-left: 10%;
+    }
+
+.SearchBar {
+    line-height: 30px;
+}
