--- a/css/my_style.css
+++ b/css/my_style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
+}
 .FirstHeader ul li{
 display:inline-block;
 color: white;
@@ -37,7 +40,7 @@ font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubun
     }
 
     .sp{
-        height: 18%;
+        height: 20%;
         width: 50%;
         position: absolute;
         z-index: 1;
@@ -47,11 +50,11 @@ font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubun
     }
     .Right{ 
          right: 0;
-        background-color: rgb(112, 98, 98);
+        background-color: 6f6d66;
     }
     .Left{
         left: 0;
-        background-color: rgb(112, 98, 98);
+        background-color: 6f6d66;
     }
 
     .dir {
@@ -103,5 +106,47 @@ font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubun
     font-size: 50%;
   }
 
+  .postImages {
+   color: white;
+    height: 20%;
+    background-color: 6f6d66;
+    font-size: 20px;
+    text-align: center;
+  }
 
+  .Newsletter {
+    background-color: rgb(211, 206, 206);
+    padding-top: 1%;
+    height: 15%;
+    text-align: left;
+    font-size: 15px;
+    color: rgb(75, 72, 72);
+  }
 
+  .Newsletter p {
+    font-size: 25px;
+  }
+
+  .footer {
+   
+    position: relative;
+    height: fit-content;
+    color: white;
+    font-size: 50px;
+    padding-bottom: 10%;    
+    background-color: rgb(75, 72, 72);
+  }
+
+  .gridContainer2 {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    grid-gap: 50px;
+  }
+  .gridItem2 {
+    
+    padding: 20px;
+    font-size: 20px;
+    text-align: center;
+ 
+  }
